# drug-rehab-rag

./: .gitignore  LICENSE  README.md  migrate_project.sh  pyproject.toml  requirements.txt
benchmark/: full_benchmark.py  load_test.py  measure_ttft.py  vllm_optimization.py
core/: build_vectordb.py  document_loader.py  quality_evaluation.py  rag_system.py  semantic_quality_eval.py
data/documents/jieduo_documents/: 《戒毒条例》,庐山市人民政府,法定主动公开内容,政策文件.txt  中华人民共和国禁毒法.txt  全国社区戒毒社区康复工作的规划（2016—2020年）.txt  关于印发《戒毒医疗服务管理暂行办法》的通知 - 中华人民共和国国家卫生健康委员会.txt  关于印发《金厢镇社区戒毒社区康复工作实施细则》的通知.txt  司法行政机关强制隔离戒毒工作规定.txt
data/questions/: jieduo_qa.json
docs/: FINAL_BENCHMARK_REPORT.md  performance_baseline.md
results/benchmark/: latest_report.json  latest_results.json
